--- a/vc-helper-tool/Dockerfile.dev
+++ b/vc-helper-tool/Dockerfile.dev
@@ -5,7 +5,10 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # アプリケーションコードのコピー（ビルド対象がローカルにある場合）
-COPY . .
+# COPY . .
+
+# アプリケーションコードのコピー
+COPY . /app
 
 # Pythonライブラリのインストール（Django, pyVmomiなど）
 RUN pip install --no-cache-dir -r requirements.txt
